# stdcodetest

./: README.md  pyproject.toml
src/stdcodetest/: gui.py  manager.py  registry.py
src/stdcodetest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
