[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stdcodetest"
version = "0.3.0"
description = "Standardized testing and sequential state management for AI agents."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
stdcodetest = "stdcodetest.manager:cli_main"
stdcodetest-gui = "stdcodetest.gui:gui_main"